camo-derive/tests/fail/explicit_discriminant.rs
use camo_derive::Camo;

#[derive(Camo)]
enum Foo {
    One = 1,
}

fn main() {}
