camo-derive/tests/fail/explicit_discriminant.stderr
error: `camo` does not support explicit discriminants
 --> tests/fail/explicit_discriminant.rs:5:11
  |
5 |     One = 1,
  |           ^
